k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nrpilot-api
  labels:
    app: nrpilot-api
spec:
  type: ClusterIP
  selector:
    app: nrpilot-api
  ports:
  - port: 80
    targetPort: 8000
